--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "nuxt.schema.ts",
     ".component-meta"
   ],
-  "scripts": {
+  "oldscripts": {
     "dev": "nuxt dev .playground --open",
     "lint": "run-s lint:eslint:fix lint:prettier:fix",
     "lint:prettier": "prettier --check \"./**/*.(ts|vue|css|scss|md)\"",
@@ -63,7 +63,7 @@
     "@vueuse/nuxt": "^11.1.0",
     "autoprefixer": "^10.4.20"
   },
-  "devDependencies": {
+  "olddevDependencies": {
     "@commitlint/cli": "^19.2.0",
     "@commitlint/config-conventional": "^19.1.0",
     "@nuxt/kit": "^3.13.2",
